appId: com.rawthrottle.riderlab
---
- launchApp
- waitForAnimationToEnd
- tapOn:
    id: "demo.nav.rodadas"
- waitForAnimationToEnd
- tapOn:
    id: "demo.rodada"
- waitForAnimationToEnd
- tapOn: "En vivo"
- wait: 2500
